<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/create_identity_personal_data_header" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:hint="@string/create_identity_first_name_hint"
            android:inputType="textCapWords" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:hint="@string/create_identity_last_name_hint"
            android:inputType="textCapWords" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:hint="@string/create_identity_maiden_name_hint"
            android:inputType="textCapWords" />

        <View
            style="@style/Separator"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing" />

        <TextView
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/create_identity_personal_data_header" />
    </LinearLayout>
</ScrollView>