<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/main_activity_scan_header" />

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/main_activity_scan_info" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/mainActivityCard"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/mainActivityPhone"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/mainActivityPhone"
                android:layout_toStartOf="@+id/mainActivityPhone"
                android:src="@drawable/nfc_card" />

            <ImageView
                android:id="@+id/mainActivityPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/phone" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/Separator"
        android:layout_marginStart="@dimen/standard_spacing"
        android:layout_marginEnd="@dimen/standard_spacing"
        android:layout_marginTop="@dimen/standard_spacing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/main_activity_create_header" />

        <TextView
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/main_activity_create_info" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/mainActivityCreateAction"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/standard_spacing"
            android:layout_marginEnd="@dimen/standard_spacing"
            android:layout_marginStart="@dimen/standard_spacing"
            android:layout_marginTop="@dimen/standard_spacing"
            android:text="@string/main_activity_create_button" />
    </LinearLayout>
</LinearLayout>